# velib_web

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.template.yml  docker-compose.yml  main.py  project_details.md  prometheus.yml  pyproject.toml  requirements.txt  run.sh
alembic/: env.py  script.py.mako
alembic/versions/: 186644cdd6f7_.py
compose/fastapi-celery/base/: Dockerfile.base
compose/fastapi-celery/celery/beat/: Dockerfile.beat  start
compose/fastapi-celery/celery/flower/: Dockerfile.flower  start
compose/fastapi-celery/celery/worker/: Dockerfile.worker
compose/fastapi-celery/web/: Dockerfile.web  entrypoint
compose/nginx/: Dockerfile  default.conf  nginx.conf
compose/pgadmin/: servers.json  servers.template.json
project/: __init__.py  celery_utils.py  config.py  database.py  logging.py  redis_utils.py
project/fu_core/: __init__.py  security.py
project/fu_core/users/: __init__.py  deps.py  models.py
project/inference/: __init__.py  crud.py  model_registry.py  models.py  schemas.py  seeders.py  tasks.py  views.py
project/inference/ml_models/: schemas.py  tempertaure_predictor.py
prometheus-grafana/: docker-compose copy.yml  docker-compose.yml
prometheus-grafana/grafana/: config.monitoring.example
prometheus-grafana/prometheus/: prometheus.yml
tests/: conftest.py  factories.py  test__db_migrations.py  test_example.py
tests/fu_core/: test_fu__models.py  test_fu__register_views.py  test_fu__user_views.py
tests/inference/: fixtures.py  test_inference__crud.py  test_inference__models.py  test_inference__tasks.py  test_inference__views.py
